@@ -245,8 +245,9 @@ of the first definition found."
       (push sublist index-alist))))
 
 (defun py--imenu-create-index-new (&optional beg end)
+  (interactive)
   "`imenu-create-index-function' for Python. "
-  (set (make-local-variable 'imenu-max-items) 99)
+  (set (make-local-variable 'imenu-max-items) py-imenu-max-items)
   (let ((orig (point))
         (beg (or beg (point-min)))
         (end (or end (point-max)))
